--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.8",
     "sass": "^1.59.3",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
